--- a/money_js_sinon_qunit/test_sinon/calc_test.html
+++ b/money_js_sinon_qunit/test_sinon/calc_test.html
@@ -8,6 +8,8 @@
 <script src="../src/calc.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
 <script src="http://code.jquery.com/qunit/qunit-2.0.1.js"></script>
+<script src="http://sinonjs.org/releases/sinon-1.17.6.js"></script>
+<script src="sinon-qunit-2.0.1.js"></script>
 <script src="calc_test.js"></script>
 
 </head>
